# Grid-Entropy

./: .gitignore  README.md  build_run.sh
src/: CMakeLists.txt  main.cpp
src/config/: CMakeLists.txt  config.h  utils.h
src/core/: .core.h.swp  CMakeLists.txt  core.cu  core.h  cuda_error_check.h
src/omp_entropy/: CMakeLists.txt  omp_entropy.cpp  omp_entropy.h
